# MonoBassSynth

./: Cargo.toml  build.sh
src/: lib.rs
src/logics/: envelope.rs  mod.rs  vcf.rs  vco.rs
src/parameters/: envelope_param.rs  mod.rs  sh101_param.rs  vcf_param.rs  vco_param.rs
